--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rocket-socket",
   "version": "1.0.0",
-  "description": "see socket.io",
+  "description": "socket.io example",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
